--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -36,45 +36,46 @@
         <main>
             <h2 class="titulo-pricipal">Carrito</h2>
             <div class="contenedor-carrito">
-                <p class="carrito-vacio">Tu carrito está vacío <i class="bi bi-emoji-frown-fill"></i>                </p>
+                <p class="carrito-vacio">Tu carrito está vacío <i class="bi bi-emoji-frown-fill"></i></p>
                 
                 <div id="contenedor-carrito-productos" class="carrito-productos disabled">
 
                     <div class="carrito-producto"></div>
                         <img class="carrito-producto-imagen" src="/img/caño.jpg" alt=""> 
-                        <div class="carrito-producto-titulo">
-                        <small>Titulo</small>
-                        <h3>caño1/4</h3>
+                            <div class="carrito-producto-titulo">
+                                <small>Titulo</small>
+                                <h3>caño 1/4</h3>
+                            </div>
+                            <div class="carrito-producto-cantidad">
+                                <small>Cantidad</small>
+                                <p>1</p>
+                            </div>
+                            <div class="carrito-producto-precio">
+                                <small>Precio</small>
+                                <p>$45000</p>
+                            </div>
+                            <div class="carrito-producto-subtotal">
+                                <small>Precio</small>
+                                <p>$45000</p>
+                            </div>
+                            <div>
+                                <button class="carrito-producto-eliminar"><i class="bi bi-trash2"></i>Eliminar</button>
+                            </div>
+
+                    </div>  
+                    <div id="carrito-acciones" class="carrito-acciones disabled">
+                        <div class="carrito-acciones-izquierda">
+                            <button class="carrito-acciones-vaciar">Vaciar carrito</button>
                         </div>
-                        <div class="carrito-producto-cantidad">
-                            <small>Cantidad</small>
-                            <p>1</p>
+                        <div class="carrito-acciones-derecha">
+                            <div class="carrito-acciones-total">
+                                <p>Total:</p>
+                                <p>$45000</p>
+                                <button class="carrito-acciones-comprar">Comprar</button>
+                            </div>
                         </div>
-                        <div class="carrito-producto-precio">
-                            <small>Precio</small>
-                            <p>$45000</p>
-                        </div>
-                        <div class="carrito-producto-subtotal">
-                            <small>Precio</small>
-                            <p>$45000</p>
-                        </div>
-                        <div>
-                            <button><i class="bi bi-trash2"></i>
-                            </button>
-                        </div>
-                </div>  
-                <div id="carrito-acciones" class="carrito-acciones disabled">
-                    <div class="carrito-acciones-izquierda">
-                        <button class="carrito-acciones-vaciar">Vaciar carrito</button>
-                    </div>
-                    <div class="carrito-acciones-derecha">
-                        <div class="carrito-acciones-total">
-                            <p>Total:</p>
-                            <p>$45000</p>
-                            <button class="carrito-acciones-comprar">Comprar</button>
-                        </div>
-                    </div>
-                </div>         
+                    </div>         
+                </div>
             </div>
         </main>
     </div>
